--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
             <input id="password2"name="password2" type="password">
             <div class="error"></div>
           </div>
-          <input id="check" class="box" type="checkbox" >
-          <label for="check" class="text">I have read and agrssd to V.Connct.</label>
+        <div class="check">
+          <input id="checkout" class="box" type="checkbox" >
+          <label for="checkout" class="text">I have read and agrssd to V.Connct.</label>
+          <div class="error"></div>
+        </div>
           <input class="sub" type="submit">
       </form>
     </div>
