--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
           </div>
         <div class="check">
           <input id="checkout" class="box" type="checkbox" >
-          <label for="checkout" class="text">I have read and agrssd to V.Connct.</label>
+          <label for="checkout" class="text">I have read and agrssd to
+            <a href="https://vconnct.me/">V.Connct</a>.</label>
           <div class="error"></div>
         </div>
           <input class="sub" type="submit">
